feat(database): initialize database schema and service
- Created schema definitions for various modules including inventory, jobs, phone, RBAC, and vehicles.
- Implemented relations for all tables to enhance query ergonomics.
- Developed a singleton DatabaseService for managing database connections and queries.
- Added TypeScript configuration for the database package.
- Ensured server-side execution only for the database package.

--- a/biome.json
+++ b/biome.json
@@ -37,7 +37,7 @@
         "noUnusedVariables": "off",
         "noUnusedImports": "error",
         "noConstAssign": "error",
-        "noUndeclaredVariables": "error"
+        "noUndeclaredVariables": "off"
       },
       "performance": {
         "noDelete": "warn"
