--- a/resources/noverna-core/package.json
+++ b/resources/noverna-core/package.json
@@ -5,5 +5,8 @@
   "scripts": {
     "build": "bun run build.ts",
     "typecheck": "tsc -p ./tsconfig.json --noEmit"
+  },
+  "dependencies": {
+    "@noverna/database": "workspace:*"
   }
 }
