--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "bun run --filter '*' build",
     "build:all": "bun run --filter './resources/**' build",
     "build:core": "bun run --filter '@noverna/core' build",
+    "build:web": "bun run --filter './resources/**' build:web",
     "db:migrate": "bun run --filter '@noverna/database' migrate",
     "db:generate": "bun run --filter '@noverna/database' generate",
     "dev": "bun run --filter '*' dev",
@@ -20,7 +21,7 @@
     "@types/bun": "latest",
     "@types/node": "^22.19.1",
     "bun-types": "latest",
-    "typescript": "^5.3.0",
+    "typescript": "5.5",
     "@citizenfx/server": "^2.0.22253-1",
     "@citizenfx/client": "^2.0.22253-1"
   },
