--- a/resources/noverna-core/package.json
+++ b/resources/noverna-core/package.json
@@ -7,6 +7,7 @@
     "typecheck": "tsc -p ./tsconfig.json --noEmit"
   },
   "dependencies": {
-    "@noverna/database": "workspace:*"
+    "@noverna/database": "workspace:*",
+    "@noverna/logger": "workspace:*"
   }
 }
