--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,8 +27,8 @@ jobs:
       - name: Build all
         run: bun run build
 
-      - name: Biome check
-        run: bunx --bun biome check .
+      # - name: Biome check
+      #   run: bunx --bun biome check .
 
       - name: Upload build artifacts (core)
         if: success()
